<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:theme="@style/Theme.RCheats"
    android:id="@+id/base_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:id="@+id/layout_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="35dp"
            android:layout_height="35dp"/>
    </LinearLayout>
    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/dark"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:text="RCheats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/ic_close"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_baseline_close_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <ScrollView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/frame_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <SeekBar
                            android:id="@+id/seekbar_frame_rate"
                            android:min="10"
                            android:max="120"
                            android:layout_weight="1.0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tv_seekbar_frame_rate"
                            android:text="120"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <TextView
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/general_characters_vision"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/layout_general_character_vision"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_weight="1.0"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_name"
                                android:text="@string/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_distance"
                                android:text="@string/distance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_health"
                                android:text="@string/health"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_team_id"
                                android:text="@string/team_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_box"
                                android:text="@string/box"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_radar_line"
                                android:text="@string/radar_line"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_weight="1.0"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_skeleton"
                                android:text="@string/skeleton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_weapon"
                                android:text="@string/weapon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_enemy_count"
                                android:text="@string/count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_360_warning"
                                android:text="@string/_360_warning"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_head_dots"
                                android:text="@string/head_dots"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <CheckBox
                                android:buttonTint="@android:color/white"
                                android:textColor="@android:color/white"
                                android:id="@+id/cb_grenade_alert"
                                android:text="@string/grenade_alert"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>
                    <TextView
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <CheckBox
                            android:id="@+id/cb_less_recoil"
                            android:buttonTint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:layoutDirection="rtl"
                            android:text="@string/less_recoil"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:id="@+id/cb_instant_hit"
                            android:buttonTint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:layoutDirection="rtl"
                            android:text="@string/instant_hit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:id="@+id/cb_fast_parachute"
                            android:buttonTint="@android:color/white"
                            android:textColor="@android:color/white"
                            android:layoutDirection="rtl"
                            android:text="@string/fast_parachute"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>