<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ui.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_margin="25dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:src="@drawable/icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>
                <TextView
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    android:text="@string/rcheats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:visibility="gone"
                android:id="@+id/cv_expired_time"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/dark"
                        android:textStyle="bold"
                        android:id="@+id/tv_expired_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:theme="@style/Theme.RCheats2"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_start_cheat"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1.0"
                    app:cardBackgroundColor="@color/blue_sky"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <LinearLayout
                        android:padding="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:src="@drawable/ic_baseline_play_arrow_24"
                            android:layout_width="35dp"
                            android:layout_height="35dp"/>
                        <TextView
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textAllCaps="false"
                            android:text="@string/start_cheat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_stop_cheat"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1.0"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <LinearLayout
                        android:padding="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:src="@drawable/ic_baseline_stop_24"
                            android:layout_width="35dp"
                            android:layout_height="35dp"/>
                        <TextView
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textAllCaps="false"
                            android:text="@string/stop_cheat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:theme="@style/Theme.RCheats2"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/dark"
                            android:text="@string/pubgm_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:id="@+id/rb_global"
                                android:buttonTint="@color/dark"
                                android:textColor="@color/dark"
                                android:text="@string/global_version"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:id="@+id/rb_vietnam"
                                android:buttonTint="@color/dark"
                                android:textColor="@color/dark"
                                android:text="@string/vietnam_version"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:id="@+id/rb_korea"
                                android:buttonTint="@color/dark"
                                android:textColor="@color/dark"
                                android:text="@string/korea_version"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </RadioGroup>
                    </LinearLayout>
                    <TextView
                        android:focusable="true"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:padding="10dp"
                        android:textColor="@color/dark"
                        android:id="@+id/tv_contact_me"
                        android:text="@string/contact_me"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>